# qweather-mcp-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs
