[package]
name = "qweather-mcp-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qweather-mcp-server"
path = "src/main.rs"

[lib]
name = "qweather_mcp_rs"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.6.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
schemars = "1.0"
