[package]
name = "qweather-mcp-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qweather-mcp-server"
path = "src/main.rs"


[dependencies]
rmcp = { version = "0.6.3", features = ["server", "macros", "transport-io", "schemars", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
schemars = "1.0"
axum = "0.7"
