[package]
name = "qweather-mcp-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qweather-mcp-server"
path = "src/main.rs"


[features]
default = []
# Enable Streamable HTTP server mode (axum + rmcp streamable-http)
http = [
    "rmcp/transport-streamable-http-server",
    "rmcp/transport-streamable-http-server-session",
    "dep:axum",
]


[dependencies]
rmcp = { version = "0.6.3", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
schemars = "1.0"
axum = { version = "0.7", optional = true }
